--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:password@localhost:2010/postgres?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost/db5"
 
 JWT_SECRET=
 
